@@ -1,3 +1,7 @@
+2008-08-19  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #9197: Misbehaviour of DAM media tab in htmlArea RTE link insertion dialogue
+
 2008-08-13  Dan Osipov  <dosipov@phillyburbs.com>
 
 	* Fixed bug #8598: Media > File: Icons are hidden by Fieldsize in IE 7.0
